Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-15413

Unexpected errors upon CREATE TABLE .. WITH SYSTEM VERSIONING AS SELECT ...

    XMLWordPrintable

Details

    Description

      MariaDB [test]> create or replace table t1 with system versioning  as select 1 as i;
      ERROR 1364 (HY000): Field 'i' doesn't have a default value
       
      MariaDB [test]> create or replace table t1 (i int) with system versioning  as select 1 as i;
      ERROR 1060 (42S21): Duplicate column name 'i'
      

      Without system versioning clause both variants work, of course.

      Attachments

        Activity

          People

            serg Sergei Golubchik
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 6h 10m
                6h 10m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.