MDEV-15413 Unexpected ER_NO_DEFAULT_FOR_FIELD or ER_DUP_FIELDNAME upon CREATE TABLE .. WITH SYSTEM VERSIONING AS SELECT ...

CLoses tempesta-tech#480