sql/handler.h
@@ -1774,7 +1774,7 @@ protected:
   bool is_end(const char *name) const;
   bool is_start(const Create_field &f) const;
   bool is_end(const Create_field &f) const;
-  bool fix_implicit(THD *thd, Alter_info *alter_info, int *added= NULL);
+  bool fix_implicit(THD *thd, Alter_info *alter_info);
   operator bool() const
   {
     return as_row.start || as_row.end || system_time.start || system_time.end;
@@ -1881,7 +1881,8 @@ struct Table_scope_and_contents_source_st
                          const TABLE_LIST &create_table,
                          const TABLE_LIST *select_table= NULL,
                          List<Item> *items= NULL,
-                         bool *versioned_write= NULL);
+                         bool *versioned_write= NULL,
+                         List<Create_field> *create_list= NULL);
 
   bool vers_native(THD *thd) const;
 
